# moe-router-study

./: .ci-trigger  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  XPU_SETUP.md  check_intel_tools.sh  commitmsg.txt  complete_refactor.py  datasets  debug_xpu.py  final_cleanup.py  fix_asyncio_run.py  fix_missing_code.py  fix_safe_await.py  main.py  models  moe.py  out  pyproject.intel.toml  pyproject.toml  refactor_kmeans.py  refactor_kmeans_final.py  refactor_kmeans_phase2.py  requirements.txt  restore_kmeans_manhattan.py  test_train_saes.16736257  test_train_saes.16736257.err  test_update.patch  trigger_ci.txt  ty.toml
.github/workflows/: ci.yml
configs/: experiment_config.yaml
core/: __init__.py  activation_collector.py  async_utils.py  data.py  device.py  device_map.py  dist.py  dtype.py  expert_analyzer.py  get_router_activations.py  intruder.py  logging.py  memory.py  model.py  model_wrapper.py  moe.py  router_analyzer.py  slurm.py  training.py  type.py
data/: __init__.py  dataset_loader.py  prompt_generator.py
docs/: intel_xpu_installation.md
exp/: EVAL_ALL_SAES_README.md  KMEANS_AUTOINTERP_README.md  __init__.py  activation_dataset.py  activations.py  autointerp_saebench.py  basic_routing_analysis.py  capital_country.py  capital_country_chat.py  capital_country_expert_diff.py  capital_country_expert_importance.py  capital_country_expert_interp.py  capital_country_expert_subset_analysis.py  capital_country_generate_path.py  capital_country_generate_path_caa.py  capital_country_viz.py  circuit_loss.py  circuit_loss_iou.py  circuit_max_activating_examples.py  circuit_max_activating_samples.py  circuit_optimization.py  circuit_score.py  device_map.py  eval_all_paths.py  eval_all_saes.py  eval_caa_router_steering.py  eval_causal_routing.py  eval_intruder.py  eval_raw_activations.py  eval_raw_activations_autointerp.py  eval_raw_activations_intruder.py  eval_raw_activations_saebench.py  eval_raw_activations_sparse_probing.py  eval_router_space.py  eval_sae.py  expert_circuit.py  expert_importance.py  get_activations.py  get_router_activations.py  get_router_activations_fixed.py  (+18 more)
exp/examples/: README.md  __init__.py  activation_dataset_example.py
scripts/: README.md  README_debug.md  analyze_intruder_scores.py  check_intel_tools.sh  debug_xpu.py  debug_xpu.slurm  debug_xpu_enhanced.py  demo_kmeans_autointerp_simple.py  download_dataset.py  download_model.py  fix_xpu_installation.py  install_intel_xpu.sh  install_xpu.sh  shuffle_activations.py  test_slurm.py
slurm/: capital_country.sh  capital_country_aces.slurm  capital_country_aces_identity.slurm  capital_country_expert_diff_aces.slurm  capital_country_expert_diff_aces_identity.slurm  capital_country_expert_diff_stampede.slurm  capital_country_expert_importance_aces.slurm  capital_country_expert_importance_aces_identity.slurm  capital_country_expert_importance_stampede.slurm  capital_country_expert_interp.sh  capital_country_expert_subset_analysis_aces.slurm  capital_country_expert_subset_analysis_aces_identity.slurm  capital_country_expert_subset_analysis_stampede.slurm  capital_country_generate_path.sh  capital_country_generate_path_aces.slurm  capital_country_generate_path_aces_identity.slurm  capital_country_generate_path_stampede.slurm  capital_country_stampede.slurm  capital_country_viz.sh  capital_country_viz_aces.slurm  capital_country_viz_aces_identity.slurm  capital_country_viz_stampede.slurm  debug_xpu.slurm  debug_xpu_enhanced.slurm  eval_all_paths.sh  eval_all_paths_aces.slurm  eval_all_paths_grace.slurm  eval_all_paths_stampede.slurm  eval_all_saes.sh  eval_all_saes_aces.slurm  eval_all_saes_aces_viz.slurm  eval_all_saes_grace.slurm  eval_all_saes_stampede.slurm  eval_causal_routing_aces.slurm  eval_causal_routing_grace.slurm  eval_pca_stampede.slurm  eval_pca_stampede_intruder.slurm  eval_raw_activations.sh  eval_raw_activations_aces.slurm  eval_raw_activations_grace.slurm  (+56 more)
test/: __init__.py  conftest.py  mock_expert_importance.py  test_activation_dataset.py  test_basic.py  test_code_quality.py  test_core_data.py  test_core_device_map.py  test_core_dtype.py  test_core_model.py  test_core_moe.py  test_core_type.py  test_dummy.py  test_exp_activations.py  test_exp_circuit_loss.py  test_exp_circuit_loss_iou.py  test_exp_circuit_max_activating_examples.py  test_exp_circuit_optimization.py  test_exp_expert_importance.py  test_exp_get_router_activations.py  test_exp_get_router_activations_integration.py  test_exp_kmeans_centroids.py  test_exp_kmeans_circuits.py  test_exp_svd_circuits.py  test_exp_training.py  test_integration.py  test_kmeans_autointerp.py  test_kmeans_validation.py  test_placeholder.py  test_utils.py  test_viz_dbscan_circuits.py  test_viz_pca_circuits.py  test_viz_pca_viz.py  test_viz_router_correlations.py  test_viz_router_spaces.py  utils.py
test/viz/: __init__.py  test_expert_importances.py  test_max_activating_examples_server.py
viz/: __init__.py  activations.py  circuit_max_activating_examples.py  dbscan_circuits.py  expert_importances.py  interactive_circuit_app.py  interactive_circuit_viz.py  kmeans_circuits.py  max_activating_examples_server.py  pca_circuits.py  pca_viz.py  plotting.py  router_correlations.py  router_jaccard_distance.py  router_path_entropy.py  router_spaces.py
