[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "exp", "viz"]

[project]
name = "moe-router-study"
version = "0.1.0"
description = "A study of MoE router mechanisms using nnterp"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Henry Castillo", email = "henryandrecastillo@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "nnterp",
    "torch>=2.0.0",
    "transformers>=4.55.1",
    "nnsight>=0.5.0.dev13",
    "datasets==4.1.1",
    "accelerate>=0.20.0",
    "einops>=0.6.0",
    "tqdm>=4.60.0",
    "matplotlib>=3.5.0",
    "trackio>=0.1.0",
    "arguably>=1.3.0",
    "torch-pca>=1.1.0",
    "scikit-learn>=1.7.1",
    "tornado>=6.5.1",
    "hatchling>=1.27.0",
    "editables>=0.5",
    "pytest-cov>=6.2.1",
    "streamlit>=1.48.1",
    "nvitop>=1.5.3",
    "wandb>=0.21.3",
    "dictionary-learning",
    "more-itertools>=10.8.0",
    "poetry>=2.2.0",
    "sae-bench",
    "asyncer>=0.0.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "ty>=0.0.1a16",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]
flash = [
    "flash-attn>=2.8.2",
]

[project.urls]
Homepage = "https://github.com/d0rbu/moe-router-study"
Repository = "https://github.com/d0rbu/moe-router-study"
Issues = "https://github.com/d0rbu/moe-router-study/issues"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ty>=0.0.1a16",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "output",
    "data",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-args
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "Q", # flake8-quotes
    "FLY", # flynt
    "PERF", # perflint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["ARG001", "S101"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["core", "exp", "viz"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=core",
    "--cov=exp",
    "--cov=viz",
    "--cov-report=term-missing"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["core", "exp", "viz"]
omit = [
    "*/test/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
nnterp = { git = "https://github.com/d0rbu/nnterp.git" }
dictionary-learning = { git = "https://github.com/d0rbu/dictionary_learning" }
sae-bench = { git = "https://github.com/d0rbu/SAEBench" }

[tool.uv.workspace]
members = [
    "saebench_env",
]


